# DisplayModel

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  main.cpp
interactive/i18/: DisplayModel_zh_CN.ts
interactive/include/widget/: DisplayModel.h
interactive/src/widget/: DisplayModel.cpp
interactive/ui/: MainWindow.ui
io/: CMakeLists.txt
io/include/: IO.h
io/src/: IO.cpp
